data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3777.wast
;; 6. **Test Description**: Simulate a `br_table` that directly interacts with imported functions and could result in invalid index targeting due to improper import declarations.    - **Specific Constraint**: Ensure proper validation of indices involving imported functions.    - **Relation to `call`**: Improper import handling in `call` function indices can be examined through similar context setups in `br_table`.

(assert_invalid
  (module
    (import "env" "externalFunction" (func $importedFunc (param i32)))
    (func $mainFunc
      (block
        (br_table 0 1 2 (i32.const 0))
      )
      (call $importedFunc (i32.const 0))
    )
  )
  "index out of bounds"
)